カメラ機能の追加

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,8 @@
 <p>
   Hello World!
 </p>
+<button (click)="takePicture()">Take Picture!</button>
+<img *ngIf="imgData" src="{{imgData}}">
+<span>
+  {{imgData}}
+</span>
